--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
     </dependency>
     
     <dependency>
+      <groupId>com.mjolnic</groupId>
+      <artifactId>bootstrap-colorpicker</artifactId>
+      <version>2.1</version>
+    </dependency>
+    
+    <dependency>
       <groupId>com.amplifyjs</groupId>
       <artifactId>amplify</artifactId>
       <version>1.1.2</version>
