--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "grunt-contrib-watch": "1.0.0",
     "grunt-execute": "0.2.2",
     "grunt-publish": "1.0.0",
+    "grunt-replace": "^1.0.1",
     "grunt-sync-json": "0.4.0",
     "main-bower-files": "2.13.1",
     "requirejs": "2.3.3"
