--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "grunt": "1.0.1",
     "grunt-bower-install-simple": "1.2.3",
     "grunt-bump": "0.8.0",
+    "grunt-contrib-compress": "^1.4.1",
     "grunt-contrib-connect": "1.0.2",
     "grunt-contrib-copy": "1.0.0",
     "grunt-contrib-watch": "1.0.0",
